# EtudeOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
assets/: cube_textured.mtl  melon.mtl  mido_01.mtl
shaders/: basic_shader.frag  basic_shader.vert  light_shader.vert
src/: ecs.h  ecs.hpp  engine.cpp  engine.hpp  main.cpp  map.cpp  map.hpp  model_manager.cpp  model_manager.hpp  octreeManager.cpp  octreeManager.hpp  physics.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.hpp  structs.hpp
